...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="MBM-3x-wzJ" kind="relationship" relationship="rootViewController" id="Lpc-f4-yDh"/>
                    </connections>
...
                    <view key="view" contentMode="scaleToFill" id="lCK-LY-MOg">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKN-EA-0T4">
                                <rect key="frame" x="272" y="72" width="56" height="30"/>
                                <state key="normal" title="Zoo List"/>
                                <connections>
                                    <action selector="zooListTapped:" destination="MBM-3x-wzJ" eventType="touchUpInside" id="mKW-Zx-Bup"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKt-4I-0Fd">
                                <rect key="frame" x="253" y="121" width="94" height="30"/>
...
                        <viewControllerLayoutGuide type="bottom" id="H5K-RV-5oL"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="nBE-0w-bpW">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Animal Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ap8-BT-A9U">
                                <rect key="frame" x="20" y="72" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="NSh-JC-7nV"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="itemChanged:" destination="gvm-7l-Pb4" eventType="editingDidEnd" id="wBF-lU-Ca8"/>
                                    <outlet property="delegate" destination="gvm-7l-Pb4" id="mhH-AI-MqH"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Animal Color" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0MU-wv-NrM">
                                <rect key="frame" x="20" y="110" width="198" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="32D-Hb-KqR"/>
                                    <constraint firstAttribute="width" constant="198" id="Yb7-nc-huR"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
